--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,6 +9,11 @@
 		<welcome-file>index.jsf</welcome-file>
 	</welcome-file-list>
 	
+	<context-param>
+        <param-name>javax.faces.PROJECT_STAGE</param-name>
+        <param-value>Development</param-value>
+    </context-param>
+    
 	<session-config>
 		<session-timeout>-1</session-timeout>
 	</session-config>
